--- a/style.css
+++ b/style.css
@@ -65,3 +65,17 @@ h1 {
     color: white;
     background-color: black;
 }
+
+table {
+    background-color: #fff;
+    color: black;
+    border: 4px solid black;
+}
+
+td {
+    border: 1px solid black;
+}
+
+th {
+    border: 1px solid black;
+}
