Ajout des fichier manquant dans le dossier + modification du css et index du site

--- a/style.css
+++ b/style.css
@@ -67,15 +67,23 @@ h1 {
 }
 
 table {
-    background-color: #fff;
+   
     color: black;
+   background-color: #fff;
     border: 4px solid black;
+}
+
+th{
+    border: 1px solid black;
 }
 
 td {
     border: 1px solid black;
 }
 
-th {
-    border: 1px solid black;
+.centrer {
+    margin-top: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
